[package]
name = "cs2_internal"
version = "0.1.0"
edition = "2021"
description = "An internal cheat base for Counter-Strike 2 (CS2) written in Rust."
license = "MIT"
repository = "https://github.com/W1lliam1337/cstrike2-hack"
homepage = "https://github.com/W1lliam1337/cstrike2-hack"
readme = "README.md"
keywords = ["cs2", "cheat", "rust", "internal"]
categories = ["game-development", "graphics"]

[lib]
crate-type = ["cdylib"]
path = "src/entry_point.rs"

[dependencies]
winapi = { version = "0.3", features = ["consoleapi", "psapi"] }
minhook-sys = "0.1"
lazy_static = "1.5.0"
once_cell = "1.8.0"
paste = "1.0"
egui = "0.19"
egui-d3d11 = { version = "0.8.0", features = [ "force-compile", "save-blob" ] }

windows = { version = "0.36", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi",
    "Win32_Foundation"
]}