[package]
name = "egui-directx11"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.49"
egui = "0.22.0"
windows = { version = "0.51.1", features = [
    "Win32_Foundation",
    "Foundation_Numerics",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi",
    "Win32_System_SystemServices",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Direct3D_Fxc",
    "Win32_UI_WindowsAndMessaging",
] }

[dev-dependencies]
winit = "0.26"
